--- a/booplesnoot-frontend/package.json
+++ b/booplesnoot-frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "immutability-helper": "^3.0.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
+    "rc-pagination": "^1.20.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
